# future

./: .gitignore  README.md
agent-media/: .gitignore  package-lock.json  package.json  server.ts  tsconfig.json
crawler-agent/: .gitignore  README.md  pyproject.toml
crawler-agent/config/: enrich-batch-10seeds.yaml  enrich-batch-20seeds-r10.yaml  enrich-batch-20seeds-r3.yaml  enrich-batch-20seeds-r4.yaml  enrich-batch-20seeds-r8.yaml  enrich-batch-20seeds-r9.yaml  enrich-batch-20seeds.yaml  enrich-batch-30seeds-r5.yaml  enrich-batch-30seeds-r6.yaml  enrich-batch-30seeds-r7.yaml  enrich-batch-ge8-50seeds.yaml  enrich-batch-ge8-offset100-30seeds.yaml  enrich-batch-ge8-placeholder-50seeds.yaml  enrich-batch-ge8-placeholder-offset50-50seeds.yaml  enrich-batch-gt8-strict-offset50-50seeds.yaml  enrich-douban.examples.yaml  enrich-fix-conflicts.yaml  enrich-recover-corrupt-2026-04-17.yaml  enrich-seed-tianguochaoy.yaml  enrich-test-与狼共舞.yaml  enrich-test-毕业生.yaml
crawler-agent/deploy/: crawler-agent.service
crawler-agent/scripts/: start.sh
crawler-agent/src/crawler_agent/: __init__.py  __main__.py  browser_manager.py  cli_login.py  config.py  cover_cache.py  douban_throttle.py  gemini.py  human.py  main.py  mcp_client.py  models.py  progress.py  registry.py  reverse_ws.py
crawler-agent/src/crawler_agent/graphs/: __init__.py  douban_subject.py  x_search.py  xhs_search.py
crawler-agent/src/crawler_agent/tools/: __init__.py  enrich_library_douban.py  gemini_series_search.py  sync_douban_collect.py
football/: .gitignore  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json
portal/: .gitignore  (+6 more)
(+116 files in other folders)
