[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawler-agent"
version = "0.1.0"
description = "LangGraph + Playwright crawl service (Douban, Xiaohongshu)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "langgraph>=0.2.50",
  "langchain-core>=0.3.0",
  "playwright>=1.49.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pyyaml>=6.0.1",
]

[project.scripts]
crawler-agent = "crawler_agent.main:run_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["crawler_agent*"]

[tool.setuptools.package-dir]
"" = "src"
